// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure with a caption containing a link should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c1 {
  display: block;
  width: 100%;
}

.c3 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c2 {
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

.c4 {
  color: #0F556C;
  padding: 2px;
  border-bottom: 1px solid #0F556C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:visited {
  color: #5C5752;
  border-bottom: 1px solid #5C5752;
}

.c4:focus {
  background-color: #0F556C;
  border-bottom: 1px solid #F5F3F1;
  color: #F5F3F1;
}

.c4:hover {
  color: #0F556C;
  background-color: #C3DEE7;
  border-bottom: 1px solid #0F556C;
}

@media (min-width:37.5em) {
  .c2 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <figcaption
    className="c2"
  >
    <span
      className="c3"
    >
      Image caption, 
    </span>
    This is a caption 
    <a
      className="c4"
      href="https://bbc.com/news"
    >
      with a link
    </a>
  </figcaption>
</figure>
`;

exports[`Figure with a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c1 {
  display: block;
  width: 100%;
}

.c3 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c2 {
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c2 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <figcaption
    className="c2"
  >
    <span
      className="c3"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with caption and non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c1 {
  display: block;
  width: 100%;
}

.c2 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c3 {
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c3 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <span
    className="c2"
  >
    Copyright Getty images
  </span>
  <figcaption
    className="c3"
  >
    <span
      className="c2"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c1 {
  display: block;
  width: 100%;
}

.c2 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <span
    className="c2"
  >
    Copyright Getty images
  </span>
</figure>
`;

exports[`Figure without a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c1 {
  display: block;
  width: 100%;
}

<figure
  className="c0"
>
  <img
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    className="c1"
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
</figure>
`;
